src/test/ui/numeric/numeric-cast.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:23:5
   |
LL |     foo::<usize>(x_u64);
   |     ^^^^^^^^^^^^^-----^
   |                  |
   |                  expected `usize`, found `u64`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({usize});
   |     ^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:25:5
   |
LL |     foo::<usize>(x_u32);
   |     ^^^^^^^^^^^^^-----^
   |                  |
   |                  expected `usize`, found `u32`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({usize});
   |     ^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:27:5
   |
LL |     foo::<usize>(x_u16);
   |     ^^^^^^^^^^^^^-----^
   |                  |
   |                  expected `usize`, found `u16`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({usize});
   |     ^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:29:5
   |
LL |     foo::<usize>(x_u8);
   |     ^^^^^^^^^^^^^----^
   |                  |
   |                  expected `usize`, found `u8`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({usize});
   |     ^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:31:5
   |
LL |     foo::<usize>(x_isize);
   |     ^^^^^^^^^^^^^-------^
   |                  |
   |                  expected `usize`, found `isize`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({usize});
   |     ^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:33:5
   |
LL |     foo::<usize>(x_i64);
   |     ^^^^^^^^^^^^^-----^
   |                  |
   |                  expected `usize`, found `i64`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({usize});
   |     ^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:35:5
   |
LL |     foo::<usize>(x_i32);
   |     ^^^^^^^^^^^^^-----^
   |                  |
   |                  expected `usize`, found `i32`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({usize});
   |     ^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:37:5
   |
LL |     foo::<usize>(x_i16);
   |     ^^^^^^^^^^^^^-----^
   |                  |
   |                  expected `usize`, found `i16`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({usize});
   |     ^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:39:5
   |
LL |     foo::<usize>(x_i8);
   |     ^^^^^^^^^^^^^----^
   |                  |
   |                  expected `usize`, found `i8`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({usize});
   |     ^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:44:5
   |
LL |     foo::<isize>(x_usize);
   |     ^^^^^^^^^^^^^-------^
   |                  |
   |                  expected `isize`, found `usize`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({isize});
   |     ^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:46:5
   |
LL |     foo::<isize>(x_u64);
   |     ^^^^^^^^^^^^^-----^
   |                  |
   |                  expected `isize`, found `u64`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({isize});
   |     ^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:48:5
   |
LL |     foo::<isize>(x_u32);
   |     ^^^^^^^^^^^^^-----^
   |                  |
   |                  expected `isize`, found `u32`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({isize});
   |     ^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:50:5
   |
LL |     foo::<isize>(x_u16);
   |     ^^^^^^^^^^^^^-----^
   |                  |
   |                  expected `isize`, found `u16`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({isize});
   |     ^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:52:5
   |
LL |     foo::<isize>(x_u8);
   |     ^^^^^^^^^^^^^----^
   |                  |
   |                  expected `isize`, found `u8`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({isize});
   |     ^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:55:5
   |
LL |     foo::<isize>(x_i64);
   |     ^^^^^^^^^^^^^-----^
   |                  |
   |                  expected `isize`, found `i64`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({isize});
   |     ^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:57:5
   |
LL |     foo::<isize>(x_i32);
   |     ^^^^^^^^^^^^^-----^
   |                  |
   |                  expected `isize`, found `i32`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({isize});
   |     ^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:59:5
   |
LL |     foo::<isize>(x_i16);
   |     ^^^^^^^^^^^^^-----^
   |                  |
   |                  expected `isize`, found `i16`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({isize});
   |     ^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:61:5
   |
LL |     foo::<isize>(x_i8);
   |     ^^^^^^^^^^^^^----^
   |                  |
   |                  expected `isize`, found `i8`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({isize});
   |     ^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:66:5
   |
LL |     foo::<u64>(x_usize);
   |     ^^^^^^^^^^^-------^
   |                |
   |                expected `u64`, found `usize`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({u64});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:69:5
   |
LL |     foo::<u64>(x_u32);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `u64`, found `u32`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({u64});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:71:5
   |
LL |     foo::<u64>(x_u16);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `u64`, found `u16`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({u64});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:73:5
   |
LL |     foo::<u64>(x_u8);
   |     ^^^^^^^^^^^----^
   |                |
   |                expected `u64`, found `u8`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({u64});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:75:5
   |
LL |     foo::<u64>(x_isize);
   |     ^^^^^^^^^^^-------^
   |                |
   |                expected `u64`, found `isize`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({u64});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:77:5
   |
LL |     foo::<u64>(x_i64);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `u64`, found `i64`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({u64});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:79:5
   |
LL |     foo::<u64>(x_i32);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `u64`, found `i32`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({u64});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:81:5
   |
LL |     foo::<u64>(x_i16);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `u64`, found `i16`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({u64});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:83:5
   |
LL |     foo::<u64>(x_i8);
   |     ^^^^^^^^^^^----^
   |                |
   |                expected `u64`, found `i8`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({u64});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:88:5
   |
LL |     foo::<i64>(x_usize);
   |     ^^^^^^^^^^^-------^
   |                |
   |                expected `i64`, found `usize`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({i64});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:90:5
   |
LL |     foo::<i64>(x_u64);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `i64`, found `u64`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({i64});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:92:5
   |
LL |     foo::<i64>(x_u32);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `i64`, found `u32`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({i64});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:94:5
   |
LL |     foo::<i64>(x_u16);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `i64`, found `u16`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({i64});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:96:5
   |
LL |     foo::<i64>(x_u8);
   |     ^^^^^^^^^^^----^
   |                |
   |                expected `i64`, found `u8`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({i64});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:98:5
   |
LL |     foo::<i64>(x_isize);
   |     ^^^^^^^^^^^-------^
   |                |
   |                expected `i64`, found `isize`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({i64});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:101:5
   |
LL |     foo::<i64>(x_i32);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `i64`, found `i32`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({i64});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:103:5
   |
LL |     foo::<i64>(x_i16);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `i64`, found `i16`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({i64});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:105:5
   |
LL |     foo::<i64>(x_i8);
   |     ^^^^^^^^^^^----^
   |                |
   |                expected `i64`, found `i8`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({i64});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:110:5
   |
LL |     foo::<u32>(x_usize);
   |     ^^^^^^^^^^^-------^
   |                |
   |                expected `u32`, found `usize`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({u32});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:112:5
   |
LL |     foo::<u32>(x_u64);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `u32`, found `u64`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({u32});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:115:5
   |
LL |     foo::<u32>(x_u16);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `u32`, found `u16`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({u32});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:117:5
   |
LL |     foo::<u32>(x_u8);
   |     ^^^^^^^^^^^----^
   |                |
   |                expected `u32`, found `u8`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({u32});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:119:5
   |
LL |     foo::<u32>(x_isize);
   |     ^^^^^^^^^^^-------^
   |                |
   |                expected `u32`, found `isize`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({u32});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:121:5
   |
LL |     foo::<u32>(x_i64);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `u32`, found `i64`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({u32});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:123:5
   |
LL |     foo::<u32>(x_i32);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `u32`, found `i32`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({u32});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:125:5
   |
LL |     foo::<u32>(x_i16);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `u32`, found `i16`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({u32});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:127:5
   |
LL |     foo::<u32>(x_i8);
   |     ^^^^^^^^^^^----^
   |                |
   |                expected `u32`, found `i8`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({u32});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:132:5
   |
LL |     foo::<i32>(x_usize);
   |     ^^^^^^^^^^^-------^
   |                |
   |                expected `i32`, found `usize`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({i32});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:134:5
   |
LL |     foo::<i32>(x_u64);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `i32`, found `u64`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({i32});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:136:5
   |
LL |     foo::<i32>(x_u32);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `i32`, found `u32`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({i32});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:138:5
   |
LL |     foo::<i32>(x_u16);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `i32`, found `u16`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({i32});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:140:5
   |
LL |     foo::<i32>(x_u8);
   |     ^^^^^^^^^^^----^
   |                |
   |                expected `i32`, found `u8`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({i32});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:142:5
   |
LL |     foo::<i32>(x_isize);
   |     ^^^^^^^^^^^-------^
   |                |
   |                expected `i32`, found `isize`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({i32});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:144:5
   |
LL |     foo::<i32>(x_i64);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `i32`, found `i64`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({i32});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:147:5
   |
LL |     foo::<i32>(x_i16);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `i32`, found `i16`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({i32});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:149:5
   |
LL |     foo::<i32>(x_i8);
   |     ^^^^^^^^^^^----^
   |                |
   |                expected `i32`, found `i8`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({i32});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:154:5
   |
LL |     foo::<u16>(x_usize);
   |     ^^^^^^^^^^^-------^
   |                |
   |                expected `u16`, found `usize`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({u16});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:156:5
   |
LL |     foo::<u16>(x_u64);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `u16`, found `u64`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({u16});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:158:5
   |
LL |     foo::<u16>(x_u32);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `u16`, found `u32`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({u16});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:161:5
   |
LL |     foo::<u16>(x_u8);
   |     ^^^^^^^^^^^----^
   |                |
   |                expected `u16`, found `u8`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({u16});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:163:5
   |
LL |     foo::<u16>(x_isize);
   |     ^^^^^^^^^^^-------^
   |                |
   |                expected `u16`, found `isize`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({u16});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:165:5
   |
LL |     foo::<u16>(x_i64);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `u16`, found `i64`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({u16});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:167:5
   |
LL |     foo::<u16>(x_i32);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `u16`, found `i32`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({u16});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:169:5
   |
LL |     foo::<u16>(x_i16);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `u16`, found `i16`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({u16});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:171:5
   |
LL |     foo::<u16>(x_i8);
   |     ^^^^^^^^^^^----^
   |                |
   |                expected `u16`, found `i8`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({u16});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:176:5
   |
LL |     foo::<i16>(x_usize);
   |     ^^^^^^^^^^^-------^
   |                |
   |                expected `i16`, found `usize`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({i16});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:178:5
   |
LL |     foo::<i16>(x_u64);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `i16`, found `u64`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({i16});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:180:5
   |
LL |     foo::<i16>(x_u32);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `i16`, found `u32`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({i16});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:182:5
   |
LL |     foo::<i16>(x_u16);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `i16`, found `u16`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({i16});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:184:5
   |
LL |     foo::<i16>(x_u8);
   |     ^^^^^^^^^^^----^
   |                |
   |                expected `i16`, found `u8`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({i16});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:186:5
   |
LL |     foo::<i16>(x_isize);
   |     ^^^^^^^^^^^-------^
   |                |
   |                expected `i16`, found `isize`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({i16});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:188:5
   |
LL |     foo::<i16>(x_i64);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `i16`, found `i64`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({i16});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:190:5
   |
LL |     foo::<i16>(x_i32);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `i16`, found `i32`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({i16});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:193:5
   |
LL |     foo::<i16>(x_i8);
   |     ^^^^^^^^^^^----^
   |                |
   |                expected `i16`, found `i8`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({i16});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:198:5
   |
LL |     foo::<u8>(x_usize);
   |     ^^^^^^^^^^-------^
   |               |
   |               expected `u8`, found `usize`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({u8});
   |     ^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:200:5
   |
LL |     foo::<u8>(x_u64);
   |     ^^^^^^^^^^-----^
   |               |
   |               expected `u8`, found `u64`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({u8});
   |     ^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:202:5
   |
LL |     foo::<u8>(x_u32);
   |     ^^^^^^^^^^-----^
   |               |
   |               expected `u8`, found `u32`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({u8});
   |     ^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:204:5
   |
LL |     foo::<u8>(x_u16);
   |     ^^^^^^^^^^-----^
   |               |
   |               expected `u8`, found `u16`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({u8});
   |     ^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:207:5
   |
LL |     foo::<u8>(x_isize);
   |     ^^^^^^^^^^-------^
   |               |
   |               expected `u8`, found `isize`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({u8});
   |     ^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:209:5
   |
LL |     foo::<u8>(x_i64);
   |     ^^^^^^^^^^-----^
   |               |
   |               expected `u8`, found `i64`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({u8});
   |     ^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:211:5
   |
LL |     foo::<u8>(x_i32);
   |     ^^^^^^^^^^-----^
   |               |
   |               expected `u8`, found `i32`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({u8});
   |     ^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:213:5
   |
LL |     foo::<u8>(x_i16);
   |     ^^^^^^^^^^-----^
   |               |
   |               expected `u8`, found `i16`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({u8});
   |     ^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:215:5
   |
LL |     foo::<u8>(x_i8);
   |     ^^^^^^^^^^----^
   |               |
   |               expected `u8`, found `i8`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({u8});
   |     ^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:220:5
   |
LL |     foo::<i8>(x_usize);
   |     ^^^^^^^^^^-------^
   |               |
   |               expected `i8`, found `usize`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({i8});
   |     ^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:222:5
   |
LL |     foo::<i8>(x_u64);
   |     ^^^^^^^^^^-----^
   |               |
   |               expected `i8`, found `u64`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({i8});
   |     ^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:224:5
   |
LL |     foo::<i8>(x_u32);
   |     ^^^^^^^^^^-----^
   |               |
   |               expected `i8`, found `u32`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({i8});
   |     ^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:226:5
   |
LL |     foo::<i8>(x_u16);
   |     ^^^^^^^^^^-----^
   |               |
   |               expected `i8`, found `u16`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({i8});
   |     ^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:228:5
   |
LL |     foo::<i8>(x_u8);
   |     ^^^^^^^^^^----^
   |               |
   |               expected `i8`, found `u8`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({i8});
   |     ^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:230:5
   |
LL |     foo::<i8>(x_isize);
   |     ^^^^^^^^^^-------^
   |               |
   |               expected `i8`, found `isize`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({i8});
   |     ^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:232:5
   |
LL |     foo::<i8>(x_i64);
   |     ^^^^^^^^^^-----^
   |               |
   |               expected `i8`, found `i64`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({i8});
   |     ^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:234:5
   |
LL |     foo::<i8>(x_i32);
   |     ^^^^^^^^^^-----^
   |               |
   |               expected `i8`, found `i32`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({i8});
   |     ^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:236:5
   |
LL |     foo::<i8>(x_i16);
   |     ^^^^^^^^^^-----^
   |               |
   |               expected `i8`, found `i16`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({i8});
   |     ^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:242:5
   |
LL |     foo::<f64>(x_usize);
   |     ^^^^^^^^^^^-------^
   |                |
   |                expected `f64`, found `usize`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({f64});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:244:5
   |
LL |     foo::<f64>(x_u64);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `f64`, found `u64`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({f64});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:246:5
   |
LL |     foo::<f64>(x_u32);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `f64`, found `u32`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({f64});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:248:5
   |
LL |     foo::<f64>(x_u16);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `f64`, found `u16`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({f64});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:250:5
   |
LL |     foo::<f64>(x_u8);
   |     ^^^^^^^^^^^----^
   |                |
   |                expected `f64`, found `u8`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({f64});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:252:5
   |
LL |     foo::<f64>(x_isize);
   |     ^^^^^^^^^^^-------^
   |                |
   |                expected `f64`, found `isize`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({f64});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:254:5
   |
LL |     foo::<f64>(x_i64);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `f64`, found `i64`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({f64});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:256:5
   |
LL |     foo::<f64>(x_i32);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `f64`, found `i32`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({f64});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:258:5
   |
LL |     foo::<f64>(x_i16);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `f64`, found `i16`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({f64});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:260:5
   |
LL |     foo::<f64>(x_i8);
   |     ^^^^^^^^^^^----^
   |                |
   |                expected `f64`, found `i8`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({f64});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:263:5
   |
LL |     foo::<f64>(x_f32);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `f64`, found `f32`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({f64});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:266:5
   |
LL |     foo::<f32>(x_usize);
   |     ^^^^^^^^^^^-------^
   |                |
   |                expected `f32`, found `usize`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({f32});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:268:5
   |
LL |     foo::<f32>(x_u64);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `f32`, found `u64`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({f32});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:270:5
   |
LL |     foo::<f32>(x_u32);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `f32`, found `u32`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({f32});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:272:5
   |
LL |     foo::<f32>(x_u16);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `f32`, found `u16`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({f32});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:274:5
   |
LL |     foo::<f32>(x_u8);
   |     ^^^^^^^^^^^----^
   |                |
   |                expected `f32`, found `u8`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({f32});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:276:5
   |
LL |     foo::<f32>(x_isize);
   |     ^^^^^^^^^^^-------^
   |                |
   |                expected `f32`, found `isize`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({f32});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:278:5
   |
LL |     foo::<f32>(x_i64);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `f32`, found `i64`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({f32});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:280:5
   |
LL |     foo::<f32>(x_i32);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `f32`, found `i32`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({f32});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:282:5
   |
LL |     foo::<f32>(x_i16);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `f32`, found `i16`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({f32});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:284:5
   |
LL |     foo::<f32>(x_i8);
   |     ^^^^^^^^^^^----^
   |                |
   |                expected `f32`, found `i8`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({f32});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:289:5
   |
LL |     foo::<u32>(x_u8 as u16);
   |     ^^^^^^^^^^^-----------^
   |                |
   |                expected `u32`, found `u16`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({u32});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast.rs:291:5
   |
LL |     foo::<i32>(-x_i8);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `i32`, found `i8`
   |
note: function defined here
  --> $DIR/numeric-cast.rs:6:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({i32});
   |     ^^^^^^^^^^

error: aborting due to 113 previous errors

For more information about this error, try `rustc --explain E0308`.
